Temporary work around for <rdar://<rdar://problem/17513375> https://bugs.webkit.org/show_bug.cgi?id=134848

Reviewed by Sam Weinig.

Temporarily work around <rdar://<rdar://problem/17513375> by
dropping the explicit cookie storage if it points out of the
container.

* UIProcess/mac/WebContextMac.mm:
(WebKit::WebContext::platformDefaultCookieStorageDirectory):


Canonical link: https://commits.webkit.org/152798@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@171023 268f45cc-cd09-0410-ab3c-d52691b4dbfc